--- a/action.yml
+++ b/action.yml
@@ -17,3 +17,11 @@ outputs:
 branding:
   icon: 'archive'
   color: 'gray-dark'
+
+runs:
+  using: docker
+  image: Dockerfile
+  env:
+    INPUT_PATH: ${{ inputs.path }}
+    INPUT_KEY: ${{ inputs.key }}
+    INPUT_RESTORE_KEYS: ${{ inputs.restore-keys }}
