--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
             ~/go/pkg/mod
           restore-keys: |
             ${{ runner.os }}-go-
+          endpoint: http://localhost:8080
 
       - name: Print Output
         id: output
