fix: adjust the options for save and cli

--- a/save/action.yml
+++ b/save/action.yml
@@ -8,6 +8,9 @@ inputs:
   key:
     description: 'An explicit key for saving the cache'
     required: true
+  endpoint:
+    description: 'The endpoint for the cache object service'
+    required: false    
 runs:
   using: docker
   image: ../Dockerfile
@@ -16,7 +19,6 @@ runs:
   env:
     INPUT_PATH: ${{ inputs.path }}
     INPUT_KEY: ${{ inputs.key }}
-    INPUT_RESTORE_KEYS: ${{ inputs.restore-keys }}
     INPUT_ENDPOINT: ${{ inputs.endpoint }}    
 branding:
   icon: 'archive'
